--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                             </section>
                         </div>
 
-                        <!-- OVERVIEW -->
                         <div>
                             <p class="grey fontsmall">ACTIONS</p>
                             <section class="actions">
@@ -104,7 +103,7 @@
                                     </div>
                                     <div class="fontmedium">
                                         <span>Credit Card</span> 
-                                        <p class="fontmedium">1234 5678 9876 6782</p>
+                                        <p class="fontmedium cardnumber">1234 5678 9876 6782</p>
                                     </div>
                                 </div>
                             </section>
@@ -148,7 +147,13 @@
 
                     <!-- TRANSACTIONS CONTENT -->
                     <div class="transactioncontent hidden">
-                        <p>transaction</p>
+                        <section class="transactionstats">
+                            
+                        </section>
+
+                        <section>
+                            
+                        </section>
                     </div>
 
                     <!-- SETTINGS CONTENT -->
