working on transaction screen

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                                 <div class="card">
                                     <div>
                                         <span class="fontmedium">Your Balance</span> 
-                                        <h3 class="cardbalance mediumbold">$7,500.00</h3>
+                                        <h3 class="cardbalance mediumbold"></h3>
                                     </div>
                                     <div class="fontmedium">
                                         <span>Credit Card</span> 
-                                        <p class="fontmedium cardnumber">1234 5678 9876 6782</p>
+                                        <p class="fontmedium cardnumber"></p>
                                     </div>
                                 </div>
                             </section>
@@ -112,18 +112,18 @@
                                 <section class="carddetails">
                                     <div class="fontmedium">
                                         <p class="deepgrey mb">Account Number</p>
-                                        <p class="semibold">1234 5678 9876 6782</p>
+                                        <p class="semibold accountnumber"></p>
                                     </div>
 
                                     <div class="fontmedium">
-                                        <p class="deepgrey mb">Swift Number</p>
-                                        <p>HE23HJK2</p>
+                                        <p class="deepgrey mb ">Swift Number</p>
+                                        <p class="swiftnumber"></p>
                                     </div>
 
                                     <div class="fontmedium">
                                         <article>
-                                            <p class="deepgrey mb">IBAN</p>
-                                            <p>HE23HJK2</p>
+                                            <p class="deepgrey mb ">IBAN</p>
+                                            <p class="iban"></p>
                                         </article>
                                         <p class="copy pointer">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -147,9 +147,7 @@
 
                     <!-- TRANSACTIONS CONTENT -->
                     <div class="transactioncontent hidden">
-                        <section class="transactionstats">
-                            
-                        </section>
+                        <section class="transactionstats"></section>
 
                         <section>
                             
