transaction search ui

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="escape">
             <button>Esc</button> 
-            <span class="grey fontsmall mediumbold">BACK</span>
+            <span class="grey ls fontsmall mediumbold">BACK</span>
         </div>
         <section class="linecontainer">
             <main>
@@ -43,7 +43,7 @@
                 <section class="herocont">
                     <aside>
                         <div>
-                            <p class="grey fontsmall">SECTIONS</p>
+                            <p class="grey fontsmall ls">SECTIONS</p>
                             <section class="sections">
                                 <div class="overview flexsmall pointer">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -67,7 +67,7 @@
                         </div>
 
                         <div>
-                            <p class="grey fontsmall">ACTIONS</p>
+                            <p class="grey fontsmall ls">ACTIONS</p>
                             <section class="actions">
                                 <div class="deposit flexsmall pointer">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -95,7 +95,7 @@
                     <div class="overviewcontent">
                         <div class="overviewcarddetails">
                             <section>
-                                <p class="grey fontsmall mediumbold">OVERVIEW</p>
+                                <p class="grey ls fontsmall mediumbold">OVERVIEW</p>
                                 <div class="card">
                                     <div>
                                         <span class="fontmedium">Your Balance</span> 
@@ -108,7 +108,7 @@
                                 </div>
                             </section>
                             <section>
-                                <p class="grey fontsmall mediumbold padleft">PERSONAL ACCOUNT</p>
+                                <p class="grey ls fontsmall mediumbold padleft">PERSONAL ACCOUNT</p>
                                 <section class="carddetails">
                                     <div class="fontmedium">
                                         <p class="deepgrey mb">Account Number</p>
@@ -136,7 +136,7 @@
                         </div>
 
                         <div class="transactions">
-                            <p class="fontsmall grey mediumbold">LAST TRANSACTIONS</p>
+                            <p class="fontsmall grey ls mediumbold">LAST TRANSACTIONS</p>
                             <div class="transactionsbox">
                             <section class="pasttransactions">
                                 
@@ -150,7 +150,15 @@
                         <section class="transactionstats"></section>
 
                         <section>
-                            
+                            <div class="transactioncountandsearch">
+                                <p class=" fontsmall ls mediumbold">TRANSACTIONS <span class="transnumber ls mediumbold">12566</span> </p>
+                                <div class="transactionsearch">
+                                    <div class="searchbox">
+                                        <div class="searchiconbox"> <img src="images/searchicon.svg" alt="search icon"> </div>
+                                        <input type="text" name="searchtransaction" id="searchtransaction" placeholder="SEARCH TRANSACTIONS" class="ls">
+                                    </div>
+                                </div>
+                            </div>
                         </section>
                     </div>
 
