transaction ui, data push function

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
                             </section>
                         </div>
 
-                        <div class="transactions">
+                        <div class="overviewtransactions">
                             <p class="fontsmall grey ls mediumbold">LAST TRANSACTIONS</p>
                             <div class="transactionsbox">
                             <section class="pasttransactions">
                                 
                             </section>
-                        </div>
+                            </div>
                         </div>
                     </div>
 
@@ -149,7 +149,7 @@
                     <div class="transactioncontent hidden">
                         <section class="transactionstats"></section>
 
-                        <section>
+                        <section class="transactions">
                             <div class="transactioncountandsearch">
                                 <p class=" fontsmall ls mediumbold">TRANSACTIONS <span class="transnumber ls mediumbold">12566</span> </p>
                                 <div class="transactionsearch">
@@ -158,6 +158,12 @@
                                         <input type="text" name="searchtransaction" id="searchtransaction" placeholder="SEARCH TRANSACTIONS" class="ls">
                                     </div>
                                 </div>
+                            </div>
+
+                            <div class="transactionsbox">
+                            <section class="transactionshistory">
+
+                            </section>
                             </div>
                         </section>
                     </div>
