--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                     <h3 class="semibold">TRANSFER MONEY</h3>
                 </div>
                 <div class="modalinputandbuttons">
-                    <input type="text" name="transferinput" id="transferinput">
+                    <div class="transferibanpaste">
+                        <div class="paste pointer"><img src="images/paste.svg" alt="paste" ></div>
+                        <input type="text" name="transferiban" id="transferiban" placeholder="IBAN NUMBER">
+                    </div>
+                    <input type="text" name="transferinput" id="transferinput" placeholder="AMOUNT">
                     <div class="modalbuttons">
                         <button class="pointer cancel" onclick="cancelModal()">CANCEL</button>
                         <button class="pointer confirm">CONFIRM</button>
@@ -83,13 +87,29 @@
     </div>
 
     <div class="container">
-
         <div class="escape">
             <button>Esc</button> 
             <span class="grey ls fontsmall mediumbold">BACK</span>
         </div>
-        <section class="linecontainer">
-            <main>
+        <section class="pincontainer">
+            <div class="pinbox">
+                <section class="flexsmall">
+                    <div> <img src="images/parallelbanklogo.svg" alt="parallel bank logo"> </div>
+                    <div class="semibold">
+                        <span class="fontmedium ">Parallel</span> <br>
+                        <span class="fontsmall grey">BANK</span>
+                    </div>
+                </section>
+                <div></div>
+                <p class="fontsmall grey">Enter your account’s PIN code</p>
+                <section class="pinnumbers">
+
+                </section>
+            </div>
+        </section>
+        <section class="linecontainer hidden">
+            
+            <main >
                 <header>
                     <section class="flexsmall">
                         <div> <img src="images/parallelbanklogo.svg" alt="parallel bank logo"> </div>
