transaction close and pop

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="text" name="withdrawinput" id="withdrawinput">
                     <div class="modalbuttons">
                         <button class="pointer cancel" onclick="cancelModal()">CANCEL</button>
-                        <button class="pointer confirm">CONFIRM</button>
+                        <button class="pointer confirm" onclick="confirmModal()">CONFIRM</button>
                     </div>
                 </div>
             </section>
@@ -52,7 +52,7 @@
                     <input type="text" name="depositinput" id="depositinput">
                     <div class="modalbuttons">
                         <button class="pointer cancel" onclick="cancelModal()">CANCEL</button>
-                        <button class="pointer confirm">CONFIRM</button>
+                        <button class="pointer confirm" onclick="confirmModal()">CONFIRM</button>
                     </div>
                 </div>
             </section>
@@ -79,7 +79,7 @@
                     <input type="text" name="transferinput" id="transferinput" placeholder="AMOUNT">
                     <div class="modalbuttons">
                         <button class="pointer cancel" onclick="cancelModal()">CANCEL</button>
-                        <button class="pointer confirm">CONFIRM</button>
+                        <button class="pointer confirm" onclick="confirmModal()">CONFIRM</button>
                     </div>
                 </div>
             </section>
@@ -91,8 +91,12 @@
             <button>Esc</button> 
             <span class="grey ls fontsmall mediumbold">BACK</span>
         </div>
-        <section class="pincontainer">
+        <!-- PIN UI CONTAINER -->
+        <section class="pincontainer hidden">
             <div class="pinbox">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" class="pointer closepincontainer">
+                    <path d="M16.3125 1.6875L1.6875 16.3125M1.6875 1.6875L16.3125 16.3125" stroke="white" stroke-opacity="0.4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
                 <section class="flexsmall">
                     <div> <img src="images/parallelbanklogo.svg" alt="parallel bank logo"> </div>
                     <div class="semibold">
@@ -107,8 +111,8 @@
                 </section>
             </div>
         </section>
-        <section class="linecontainer hidden">
-            
+        <!-- MAIN BANK DASHBOARD -->
+        <section class="linecontainer">
             <main >
                 <header>
                     <section class="flexsmall">
