working on pin functionality

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                     </section>
 
                     <section class="flexsmall">
-                        <div> <img src="images/profileimage.svg" alt="profile picture"> </div>
+                        <div> <img src="" alt="profile picture" class="profileimage"> </div>
                         <div class="semibold">
-                            <span class="fontmedium ">John Oils</span> <br>
-                            <span class="fontsmall grey">Wallet: $600</span>
+                            <span class="fontmedium profilename"></span> <br>
+                            <span class="fontsmall grey profilebalance"></span>
                         </div>
                         <div class="logoutdiv pointer">
                             <img src="images/logoutred.svg" alt="log out">
