little changes on functions

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- PIN UI CONTAINER -->
         <section class="pincontainer hidden">
             <div class="pinbox">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" class="pointer closepincontainer">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" class="pointer closepincontainer" onclick="closepincontainer()">
                     <path d="M16.3125 1.6875L1.6875 16.3125M1.6875 1.6875L16.3125 16.3125" stroke="white" stroke-opacity="0.4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <section class="flexsmall">
