--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h3 class="semibold">DEPOSIT MONEY</h3>
                 </div>
                 <div class="modalinputandbuttons">
-                    <input type="text" name="depositinput" id="depositinput">
+                    <input type="number" name="depositinput" id="depositinput">
                     <div class="modalbuttons">
                         <button class="pointer cancel" onclick="cancelModal()">CANCEL</button>
                         <button class="pointer confirm" onclick="confirmDeposit()">CONFIRM</button>
@@ -76,7 +76,7 @@
                         <div class="paste pointer"><img src="images/paste.svg" alt="paste" ></div>
                         <input type="text" name="transferiban" id="transferiban" placeholder="IBAN NUMBER">
                     </div>
-                    <input type="text" name="transferinput" id="transferinput" placeholder="AMOUNT">
+                    <input type="number" name="transferinput" id="transferinput" placeholder="AMOUNT">
                     <div class="modalbuttons">
                         <button class="pointer cancel" onclick="cancelModal()">CANCEL</button>
                         <button class="pointer confirm" onclick="confirmTransfer()">CONFIRM</button>
