working on scales

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <div class="container">
         <div class="escape">
-            <button>Esc</button> 
+            <button class="fontsmall">Esc</button> 
             <span class="grey ls fontsmall mediumbold">BACK</span>
         </div>
         <!-- PIN UI CONTAINER -->
