--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <span class="fontmedium profilename"></span> <br>
                             <span class="fontsmall grey profilebalance"></span>
                         </div>
-                        <div class="logoutdiv pointer">
+                        <div class="logoutdiv pointer" onclick="logout()">
                             <img src="images/logoutred.svg" alt="log out">
                         </div>
                     </section>
