changed modal transition

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- WITHDRAW CONTENT -->
-    <div class="darktransparent withdrawcontent hidden">
+    <div class="darktransparent withdrawcontent modalhidden">
         <div class="modalcontainer">
             <section class="modal">
                 <div>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <!-- DEPOSIT CONTENT -->
-    <div class="darktransparent depositcontent hidden">
+    <div class="darktransparent depositcontent modalhidden">
         <div class="modalcontainer">
             <section class="modal">
                 <div>
@@ -58,7 +58,7 @@
         </div>
     </div>
     <!-- TRANSFER CONTENT -->
-    <div class="darktransparent transfercontent hidden">
+    <div class="darktransparent transfercontent modalhidden">
         <div class="modalcontainer">
             <section class="modal">
                 <div>
